--- a/fireBlogs4.html
+++ b/fireBlogs4.html
@@ -5,18 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="fireBlog.css">
+    <script src="fireblogs.js" defer></script>
     <title>Forgiveness</title>
 </head>
     <body>
 
+      <section id="home">
+        <nav class="navbar">
+          <div class="content">
+            <div class="logo">
+                <a href="index.html#connects">
+                <img src="HeadnFooter/logo.png" alt="">
+                </a>
+            </div>
+            <ul class="menu-list">
+                <div class="icon cancel-btn">
+                    <img src="HeadnFooter/menu.png" alt="">
+                </div>
+                <li><a href="Wildfire.html">Home</a></li>
+                <li><a href="Wildfire.html#aboutus">About Us</a></li>
+                <li><a href="Wildfire.html#blogs">Blogs</a></li>
+                <li><a href="Wildfire.html#subscribe">Subscribe</a></li>
+                <li><a href="Announcement.html">Announcements</a></li>
+            </ul>
+            <div class="icon menu-btn">
+              <img src="HeadnFooter/menu.png" alt="">
+            </div>
+          </div>
+        </nav>
+      </section>
+
 <div class="banner">
-    <div class="home">
-        <a href="Wildfire.html#blogs">
-        <img src="SundaySchooltings/arrowback-removebg-preview.png" alt="">
-        </a>
-    </div>
     <h1>Practicing Forgiveness</h1>
-    <p></p>
 </div>
 
 <div class="breeh">
@@ -24,7 +44,7 @@
 </div>
 
 
-<div class="content">
+<div class="content1">
     <p>Dear teenagers, Today, I want to talk to you about one of the most important virtues that you can practice: forgiveness.</p>
     <p>As young people, you are at a stage in life where you may experience hurt and pain from the actions of others. It can be challenging to forgive those who have hurt you, but practicing forgiveness is crucial for your emotional and spiritual well-being.</p>
     <p>Forgiveness means letting go of anger, resentment, and bitterness towards those who have hurt you. It's not easy, but it's an essential aspect of our faith as Christians. When we forgive others, we show the love and mercy of Jesus Christ.</p>
@@ -61,7 +81,7 @@
       <p>Equipping</p>
       <div class="botli">
         <p><a href="Mentoring.html">Mentoring</a></p>
-        <p><a href="SOL Class">SOL Class</a></p>
+        <p><a href="SOL.html">SOL Class</a></p>
         <p><a href="LifeClass.html">LifeClass</a></p>
       </div>
     </div>
@@ -113,7 +133,7 @@
         <p class="noice">Equipping</p>
         <div class="links">
           <p><a href="Mentoring.html">Mentoring</a></p>
-          <p><a href="SOL Class">SOL Class</a></p>
+          <p><a href="SOL.html">SOL Class</a></p>
           <p><a href="LifeClass.html">LifeClass</a></p>
         </div>
       </div>
