--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
     
     <div class="slideshow-container">
       
-      <!-- <div class="mySlides fade">
+      <div class="mySlides fade">
           <a href="Sundayservice.html#sermons"><img src="HeadnFooter/img69.png" style="width:100%"></a>
-      </div> -->
+      </div>
       <div class="mySlides fade">
           <img src="HeadnFooter/img.png" style="width:100%">
       </div>
@@ -54,7 +54,7 @@
 
       <div style="text-align:center; margin:-5vh;">
   
-          <!-- <span class="dot"></span> -->
+          <span class="dot"></span>
           <span class="dot"></span>
           <span class="dot"></span>
           <span class="dot"></span>
