--- a/Archive4.html
+++ b/Archive4.html
@@ -5,10 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Archive1.css">
-    <link rel="stylesheet" href="Index.css">
+    
+    <script src="Archive.js" defer></script>
     <title>Miracles of Life</title>
+
 </head>
     <body>
+
+      <section id="home">
+        <nav class="navbar">
+          <div class="content">
+            <a href="index.html#connects">
+              <img src="HeadnFooter/logo.png" alt="">
+            </a>
+            <ul class="menu-list">
+              <div class="icon cancel-btn">
+                <img src="HeadnFooter/menu.png" alt="">
+              </div>
+              <li><a href="Sundayservice.html">Home</a></li>
+              <li><a href="Sundayservice.html#aboutus">About Us</a></li>
+              <li><a href="Sundayservice.html#sermons">Sermons</a></li>
+              <li><a href="Sundayservice.html#subscribe">Subscribe</a></li>
+              <li><a href="PrayerRequest.html">Prayer Request</a></li>
+              <li><a href="Announcement.html">Announcements</a></li>
+            </ul>
+            <div class="icon menu-btn">
+              <img src="HeadnFooter/menu.png" alt="">
+            </div>
+          </div>
+        </nav>
+      </section>
+      
 
 <div class="banner">
     <div class="home">
