--- a/fireBlogs1.html
+++ b/fireBlogs1.html
@@ -5,16 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="fireBlog.css">
+    <script src="fireblogs.js" defer></script>
     <title>Purpose of our life</title>
 </head>
     <body>
 
+      <section id="home">
+        <nav class="navbar">
+          <div class="content">
+            <div class="logo">
+                <a href="index.html#connects">
+                <img src="HeadnFooter/logo.png" alt="">
+                </a>
+            </div>
+            <ul class="menu-list">
+                <div class="icon cancel-btn">
+                    <img src="HeadnFooter/menu.png" alt="">
+                </div>
+                    <li><a href="Wildfire.html">Home</a></li>
+                    <li><a href="Wildfire.html#aboutus">About Us</a></li>
+                    <li><a href="Wildfire.html#blogs">Blogs</a></li>
+                    <li><a href="Wildfire.html#subscribe">Subscribe</a></li>
+                    <li><a href="Announcement.html">Announcements</a></li>
+            </ul>
+            <div class="icon menu-btn">
+              <img src="HeadnFooter/menu.png" alt="">
+            </div>
+          </div>
+        </nav>
+      </section>
+
 <div class="banner">
-    <div class="home">
-        <a href="Wildfire.html#blogs">
-        <img src="SundaySchooltings/arrowback-removebg-preview.png" alt="">
-        </a>
-    </div>
     <h1>Purpose of our life</h1>
     <p></p>
 </div>
@@ -24,7 +45,7 @@
 </div>
 
 
-<div class="content">
+<div class="content1">
     <p>My dear teenagers, As you navigate through your teenage years, it is important to understand that this time in your life is crucial in shaping your future. You are at an age where you are discovering who you are, what you stand for, and what your purpose in life is.</p>
     <p>Many of you may be wondering, "What is the purpose of my life?" This is a question that has been asked by countless people throughout history, and one that continues to be relevant today. The truth is, each one of us has a unique purpose that is specific to us and our individual talents, passions, and experiences.</p>
     <p>However, the purpose of our life as teenagers is not something that we can simply stumble upon. It requires intentional exploration, self-reflection, and a willingness to take risks and try new things.</p>
@@ -57,7 +78,7 @@
       <p>Equipping</p>
       <div class="botli">
         <p><a href="Mentoring.html">Mentoring</a></p>
-        <p><a href="SOL Class">SOL Class</a></p>
+        <p><a href="SOL.html">SOL Class</a></p>
         <p><a href="LifeClass.html">LifeClass</a></p>
       </div>
     </div>
@@ -109,7 +130,7 @@
         <p class="noice">Equipping</p>
         <div class="links">
           <p><a href="Mentoring.html">Mentoring</a></p>
-          <p><a href="SOL Class">SOL Class</a></p>
+          <p><a href="SOL.html">SOL Class</a></p>
           <p><a href="LifeClass.html">LifeClass</a></p>
         </div>
       </div>
