--- a/fireBlogs2.html
+++ b/fireBlogs2.html
@@ -5,18 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="fireBlog.css">
+    <script src="fireblogs.js" defer></script>
     <title>Relationship with God</title>
 </head>
     <body>
 
+      <section id="home">
+        <nav class="navbar">
+          <div class="content">
+            <div class="logo">
+                <a href="index.html#connects">
+                <img src="HeadnFooter/logo.png" alt="">
+                </a>
+            </div>
+            <ul class="menu-list">
+                <div class="icon cancel-btn">
+                    <img src="HeadnFooter/menu.png" alt="">
+                </div>
+                <li><a href="Wildfire.html">Home</a></li>
+                <li><a href="Wildfire.html#aboutus">About Us</a></li>
+                <li><a href="Wildfire.html#blogs">Blogs</a></li>
+                <li><a href="Wildfire.html#subscribe">Subscribe</a></li>
+                <li><a href="Announcement.html">Announcements</a></li>
+            </ul>
+            <div class="icon menu-btn">
+              <img src="HeadnFooter/menu.png" alt="">
+            </div>
+          </div>
+        </nav>
+      </section>
+
 <div class="banner">
-    <div class="home">
-        <a href="Wildfire.html#blogs">
-        <img src="SundaySchooltings/arrowback-removebg-preview.png" alt="">
-        </a>
-    </div>
     <h1>Personal Relationship with God</h1>
-    <p></p>
 </div>
 
 <div class="breeh">
@@ -24,7 +44,7 @@
 </div>
 
 
-<div class="content">
+<div class="content1">
     <p>Dear teenagers, I'm here today to talk to you about the importance of deepening your relationship with God. In the midst of busy schedules, homework, and extracurricular activities, it can be easy to forget about our spiritual lives. But I want to encourage you to make time for God, and to invest in your relationship with Him.</p>
     <p>First and foremost, prayer is essential to building a strong relationship with God. Prayer is simply talking to God, sharing our joys, worries, and concerns with Him. It doesn't have to be formal or fancy - just honest and heartfelt. Try setting aside a few minutes each day to pray, whether it's in the morning, at bedtime, or during your lunch break. And don't be afraid to ask God for guidance, wisdom, and strength.</p>
     <p>Another way to deepen your relationship with God is to read the Bible. The Bible is God's word to us, and through it, we can learn about His character, His love for us, and His plan for our lives. If you're not sure where to start, try reading the Gospel of John or the Psalms. You can also use a devotional or study guide to help you understand the Bible better.</p>
@@ -57,7 +77,7 @@
       <p>Equipping</p>
       <div class="botli">
         <p><a href="Mentoring.html">Mentoring</a></p>
-        <p><a href="SOL Class">SOL Class</a></p>
+        <p><a href="SOL.html">SOL Class</a></p>
         <p><a href="LifeClass.html">LifeClass</a></p>
       </div>
     </div>
@@ -109,7 +129,7 @@
         <p class="noice">Equipping</p>
         <div class="links">
           <p><a href="Mentoring.html">Mentoring</a></p>
-          <p><a href="SOL Class">SOL Class</a></p>
+          <p><a href="SOL.html">SOL Class</a></p>
           <p><a href="LifeClass.html">LifeClass</a></p>
         </div>
       </div>
