--- a/fireBlogs3.html
+++ b/fireBlogs3.html
@@ -5,18 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="fireBlog.css">
+    <script src="fireblogs.js" defer></script>
     <title>Resilience</title>
 </head>
     <body>
 
+      <section id="home">
+        <nav class="navbar">
+          <div class="content">
+            <div class="logo">
+                <a href="index.html#connects">
+                <img src="HeadnFooter/logo.png" alt="">
+                </a>
+            </div>
+            <ul class="menu-list">
+                <div class="icon cancel-btn">
+                    <img src="HeadnFooter/menu.png" alt="">
+                </div>
+                <li><a href="Wildfire.html">Home</a></li>
+                <li><a href="Wildfire.html#aboutus">About Us</a></li>
+                <li><a href="Wildfire.html#blogs">Blogs</a></li>
+                <li><a href="Wildfire.html#subscribe">Subscribe</a></li>
+                <li><a href="Announcement.html">Announcements</a></li>
+            </ul>
+            <div class="icon menu-btn">
+              <img src="HeadnFooter/menu.png" alt="">
+            </div>
+          </div>
+        </nav>
+      </section>
+
 <div class="banner">
-    <div class="home">
-        <a href="Wildfire.html#blogs">
-        <img src="SundaySchooltings/arrowback-removebg-preview.png" alt="">
-        </a>
-    </div>
     <h1>Resilence</h1>
-    <p></p>
 </div>
 
 <div class="breeh">
@@ -24,7 +44,7 @@
 </div>
 
 
-<div class="content">
+<div class="content1">
     <p>Life can be tough at times, and we all face challenges and setbacks along the way. But I want to encourage you to develop resilience - the ability to bounce back from difficult situations and persevere in the face of adversity.</p>
     <p>The first step in developing resilience is to cultivate a positive mindset. Instead of dwelling on negative thoughts and circumstances, focus on the things you're grateful for and the positive aspects of your life. Look for the silver lining in difficult situations, and try to see challenges as opportunities for growth and learning.</p>
     <p>Another key aspect of resilience is to build a support network of friends, family, and mentors who can offer encouragement and advice when you need it. Don't be afraid to reach out to others when you're struggling, and be willing to lend a listening ear to those who need it.</p>
@@ -58,7 +78,7 @@
       <p>Equipping</p>
       <div class="botli">
         <p><a href="Mentoring.html">Mentoring</a></p>
-        <p><a href="SOL Class">SOL Class</a></p>
+        <p><a href="SOL.html">SOL Class</a></p>
         <p><a href="LifeClass.html">LifeClass</a></p>
       </div>
     </div>
@@ -110,7 +130,7 @@
         <p class="noice">Equipping</p>
         <div class="links">
           <p><a href="Mentoring.html">Mentoring</a></p>
-          <p><a href="SOL Class">SOL Class</a></p>
+          <p><a href="SOL.html">SOL Class</a></p>
           <p><a href="LifeClass.html">LifeClass</a></p>
         </div>
       </div>
