--- a/Blog1.html
+++ b/Blog1.html
@@ -5,16 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Blog1.css">
+    <link rel="stylesheet" href="BlogNavBar.css"> 
+    <script src="spearhead.js" defer></script>
     <title>Companionship</title>
 </head>
     <body>
 
+      <section id="home">
+        <nav class="navbar">
+          <div class="content">
+            <div class="logo">
+                <a href="index.html#connects">
+                <img src="HeadnFooter/logo.png" alt="">
+                </a>
+            </div>
+            <ul class="menu-list">
+                <div class="icon cancel-btn">
+                    <img src="HeadnFooter/menu.png" alt="">
+                </div>
+                    <li><a href="index.html#connects">Home</a></li>
+                    <li><a href="Spearhead.html#aboutus">About Us</a></li>
+                    <li><a href="Spearhead.html#leads">Cell Leaders</a></li>
+                    <li><a href="Spearhead.html#blogss">Blogs</a></li>
+                    <li><a href="Spearhead.html#subs1">Subscribe</a></li>
+                    <li><a href="Announcement.html">Announcements</a></li>
+            </ul>
+            <div class="icon menu-btn">
+              <img src="HeadnFooter/menu.png" alt="">
+            </div>
+          </div>
+        </nav>
+      </section>
+
 <div class="banner">
-    <div class="home">
-        <a href="Spearhead.html#blogss">
-        <img src="SundaySchooltings/arrowback-removebg-preview.png" alt="">
-        </a>
-    </div>
     <h1>Companionship</h1>
     <p></p>
 </div>
@@ -24,7 +47,7 @@
 </div>
 
 
-<div class="content">
+<div class="content1">
     <p>Today, I want to talk to you about the importance of companionship. In our lives, we all need companions who can help us grow and navigate the ups and downs of life. Companionship is an essential aspect of our human experience, and it is something that we should cherish and nurture.</p>
     <p>As human beings, we are social creatures, and we thrive in the company of others. The Bible tells us that God created Adam and saw that he was alone, and so he created Eve to be his companion. From that moment on, companionship has been an integral part of our human experience.</p>
     <p>Throughout our lives, we will encounter different types of companions. We will have family members, friends, and even romantic partners who will come and go. Some companions will stay with us for a short while, while others will be with us for a lifetime. But regardless of the length of their stay, each companion that we encounter will play a unique role in shaping our lives.</p>
