--- a/Blog3.html
+++ b/Blog3.html
@@ -5,16 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Blog1.css">
+    <link rel="stylesheet" href="BlogNavBar.css"> 
+    <script src="spearhead.js" defer></script>
     <title>Significance of Life</title>
 </head>
     <body>
 
+      <section id="home">
+        <nav class="navbar">
+          <div class="content">
+            <div class="logo">
+                <a href="index.html#connects">
+                <img src="HeadnFooter/logo.png" alt="">
+                </a>
+            </div>
+            <ul class="menu-list">
+                <div class="icon cancel-btn">
+                    <img src="HeadnFooter/menu.png" alt="">
+                </div>
+                    <li><a href="index.html#connects">Home</a></li>
+                    <li><a href="Spearhead.html#aboutus">About Us</a></li>
+                    <li><a href="Spearhead.html#leads">Cell Leaders</a></li>
+                    <li><a href="Spearhead.html#blogss">Blogs</a></li>
+                    <li><a href="Spearhead.html#subs1">Subscribe</a></li>
+                    <li><a href="Announcement.html">Announcements</a></li>
+            </ul>
+            <div class="icon menu-btn">
+              <img src="HeadnFooter/menu.png" alt="">
+            </div>
+          </div>
+        </nav>
+      </section>
+
 <div class="banner">
-    <div class="home">
-        <a href="Spearhead.html#blogss">
-        <img src="SundaySchooltings/arrowback-removebg-preview.png" alt="">
-        </a>
-    </div>
     <h1>Significance of Life</h1>
     <p></p>
 </div>
@@ -24,7 +47,7 @@
 </div>
 
 
-<div class="content">
+<div class="content1">
     <p>Today, I want to talk to you about the significance of life. Life is a precious gift that we have been given, and it is essential that we recognize its value and purpose. We all have a unique role to play in this world, and it is up to us to discover it and fulfill it.</p>
     <p>The Bible tells us in Psalm 139:14, "I praise you because I am fearfully and wonderfully made; your works are wonderful, I know that full well." This verse reminds us that we are all fearfully and wonderfully made by God, and that our lives have a divine purpose.</p>
     <p>We often get caught up in the busyness of life and forget to appreciate its significance. We focus on our daily routines, our jobs, and our relationships, and we forget that there is more to life than just these things. Life is about more than just surviving; it is about thriving and fulfilling our purpose.</p>
@@ -57,7 +80,7 @@
       <p>Equipping</p>
       <div class="botli">
         <p><a href="Mentoring.html">Mentoring</a></p>
-        <p><a href="SOL Class">SOL Class</a></p>
+        <p><a href="SOL.html">SOL Class</a></p>
         <p><a href="LifeClass.html">LifeClass</a></p>
       </div>
     </div>
