--- a/Blog4.html
+++ b/Blog4.html
@@ -5,16 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Blog1.css">
+    <link rel="stylesheet" href="BlogNavBar.css"> 
+    <script src="spearhead.js" defer></script>
     <title>Time</title>
 </head>
     <body>
 
+      <section id="home">
+        <nav class="navbar">
+          <div class="content">
+            <div class="logo">
+                <a href="index.html#connects">
+                <img src="HeadnFooter/logo.png" alt="">
+                </a>
+            </div>
+            <ul class="menu-list">
+                <div class="icon cancel-btn">
+                    <img src="HeadnFooter/menu.png" alt="">
+                </div>
+                    <li><a href="index.html#connects">Home</a></li>
+                    <li><a href="Spearhead.html#aboutus">About Us</a></li>
+                    <li><a href="Spearhead.html#leads">Cell Leaders</a></li>
+                    <li><a href="Spearhead.html#blogss">Blogs</a></li>
+                    <li><a href="Spearhead.html#subs1">Subscribe</a></li>
+                    <li><a href="Announcement.html">Announcements</a></li>
+            </ul>
+            <div class="icon menu-btn">
+              <img src="HeadnFooter/menu.png" alt="">
+            </div>
+          </div>
+        </nav>
+      </section>
+
 <div class="banner">
-    <div class="home">
-        <a href="Spearhead.html#blogss">
-        <img src="SundaySchooltings/arrowback-removebg-preview.png" alt="">
-        </a>
-    </div>
     <h1>Maximixing Our Time</h1>
     <p></p>
 </div>
@@ -24,7 +47,7 @@
 </div>
 
 
-<div class="content">
+<div class="content1">
     <p>Today, I want to talk to you about the importance of maximizing your time. Time is a precious commodity that we have been given, and it is essential that we use it wisely. We all have a finite amount of time on this earth, and it is up to us to make the most of it.</p>
     <p>The Bible tells us in Ephesians 5:15-16, "Be very careful, then, how you live—not as unwise but as wise, making the most of every opportunity, because the days are evil." This verse reminds us that we must be wise in how we use our time and make the most of every opportunity.</p>
     <p>So, how can we maximize our time? The first step is to prioritize our time. We must determine what is most important to us and focus our time and energy on those things. We must also learn to say no to things that are not essential or do not align with our priorities.</p>
