--- a/J12Kids.html
+++ b/J12Kids.html
@@ -24,7 +24,7 @@
             </div>
                 <li><a href="index.html#connects">Home</a></li>
                 <li><a href="#aboutus">About Us</a></li>
-                <li><a href="#sermons">Teachers</a></li>
+                <li><a href="#teachers">Teachers</a></li>
                 <li><a href="#blogs">Stories</a></li>
                 <li><a href="PrayerRequest.html">Prayer Request</a></li>
                 <li><a href="Announcement.html">Announcements</a></li>
@@ -72,6 +72,7 @@
     </div>
 </section>
 
+<section id="teachers">
     <div class="teachers ">
         <div class = "meet">
             <h1>Meet our Teachers!</h1>
@@ -215,6 +216,7 @@
 
         </div>  
     </div>
+</section>
 
     <section id="blogs">
         <div class="desc">
@@ -307,7 +309,7 @@
           <p>Equipping</p>
           <div class="botli">
             <p><a href="Mentoring.html">Mentoring</a></p>
-            <p><a href="SOL Class">SOL Class</a></p>
+            <p><a href="SOL.html">SOL Class</a></p>
             <p><a href="LifeClass.html">LifeClass</a></p>
           </div>
         </div>
@@ -359,7 +361,7 @@
             <p class="noice">Equipping</p>
             <div class="links">
               <p><a href="Mentoring.html">Mentoring</a></p>
-              <p><a href="SOL Class">SOL Class</a></p>
+              <p><a href="SOL.html">SOL Class</a></p>
               <p><a href="LifeClass.html">LifeClass</a></p>
             </div>
           </div>
