--- a/MLblog2.html
+++ b/MLblog2.html
@@ -5,18 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Mlblog.css">
+    <link rel="stylesheet" href="MLNavbar.css">
+    <script src="married.js" defer></script>
     <title>Resolving Conflict</title>
 </head>
     <body>
 
+        <section id="home">
+            <nav class="navbar">
+            <div class="content">
+                <div class="logo">
+                    <a href="index.html#connects">
+                    <img src="HeadnFooter/logo.png" alt="">
+                    </a>
+                </div>
+                <ul class="menu-list">
+                    <div class="icon cancel-btn">
+                        <img src="HeadnFooter/menu.png" alt="">
+                    </div>
+                        <li><a href="index.html#connects">Home</a></li>
+                        <li><a href="Married4Life.html#aboutus">About Us</a></li>
+                        <li><a href="Married4Life.html#blogs">Blogs</a></li>
+                        <li><a href="Married4Life.html#subscribe">Subscribe</a></li>
+                        <li><a href="Announcement.html">Announcements</a></li>
+                </ul>
+                <div class="icon menu-btn">
+                    <img src="HeadnFooter/menu.png" alt="">
+                </div>
+            </div>
+            </nav>
+      </section>
+
 <div class="banner">
-    <div class="home">
-        <a href="Married4Life.html#blogs">
-        <img src="SundaySchooltings/arrowback-removebg-preview.png" alt="">
-        </a>
-    </div>
     <h1>Resolving Conflict</h1>
-    <p>Finding Unity and Reconciliation Through Humility and Grace</p>
+
 </div>
 
 <div class="breeh">
@@ -24,7 +46,7 @@
 </div>
 
 
-<div class="content">
+<div class="content1">
     <p>Dear brothers and sisters in Christ, Today, I want to speak to you about resolving conflict in marriage. As we all know, conflict is inevitable in any relationship, but it can be especially challenging in marriage. When two people with different personalities, backgrounds, and expectations come together, it is natural for there to be disagreements and misunderstandings.</p>
     <p>However, conflict does not have to be destructive. In fact, when approached with humility and grace, conflict can actually strengthen a marriage and bring the couple closer together.</p>
     <p>So how can we resolve conflict in our marriages in a way that brings unity and reconciliation? The answer lies in three key principles: humility, grace, and forgiveness.</p>
@@ -37,6 +59,108 @@
     <p>In conclusion, let us remember that conflict is a natural part of any relationship, but it does not have to be destructive. When we approach conflict with humility, grace, and forgiveness, we can find unity and reconciliation in our marriages. So let us commit ourselves to resolving conflict in a healthy and productive way, and to being a testimony of God's love and grace to the world around us.</p>
     <p>May God bless you and your marriages abundantly. Amen.</p>
 </div>
+
+<div class="bottomLinks">
+
+    <div class="firstGrid">
+      <img src="HeadnFooter/logo.png" alt="">
+      <h1><a href="">JGLWHM</a></h1>
+      <p>Matthew 4:16 - "The people living in darkness have seen a great light; on those living in the land o</p>
+    </div>
+  
     
+    <div class="secondGrid">
+        <p>Connects</p>
+        <div class="botli">
+          <p><a href="Sundayservice.html">Sunday School</a></p>
+          <p><a href="Wildfire.html">Wildfire</a></p>
+          <p><a href="J12Kids.html">J12 Kids</a></p>
+          <p><a href="Spearhead.html">Spearhead</a></p>
+          <p><a href="Married4Life.html">Married for Life</a></p>
+        </div>
+    </div>
+  
+    <div class="thirdGrid">
+      <p>Equipping</p>
+      <div class="botli">
+        <p><a href="Mentoring.html">Mentoring</a></p>
+        <p><a href="SOL.html">SOL Class</a></p>
+        <p><a href="LifeClass.html">LifeClass</a></p>
+      </div>
+    </div>
+  
+    <div class="thirdGrid">
+      <p>Others</p>
+      <div class="botli">
+        <p><a href="Media.html">Media</a></p>
+        <p><a href="PrayerRequest.html">Prayer Request</a></p>
+        <p><a href="Announcement.html">Announcement</a></p>
+      </div>
+    </div>
+  
+    <div class="thirdGrid">
+      <p>Socials</p>
+      <div class="botli">
+        <p><a href="https://www.facebook.com/greatlightworldharvest">Facebook</a></p>
+        <p><a href="https://www.youtube.com/@jesusthegreatlightworldhar1413/featured">Youtube</a></p>
+      </div>
+    </div>
+   
+  
+  </div>
+  
+  <div class="mobileLinks">
+    
+    <div class="first">
+      <div class="firstGrid">
+        <img src="HeadnFooter/logo.png" alt="">
+        <h1><a href="index.html">JGLWHM</a></h1>
+        <p>Matthew 4:16 - "The people living in darkness have seen a great light; on those living in the land o</p>
+      </div>
+    </div>
+  
+    <div class="second">
+  
+      <div class="secondLane">
+        <p class="noice">Connects</p>
+        <div class="links">
+          <p><a href="Sundayservice.html">Sunday School</a></p>
+          <p><a href="Wildfire.html">Wildfire</a></p>
+          <p><a href="J12Kids.html">J12 Kids</a></p>
+          <p><a href="Spearhead.html">Spearhead</a></p>
+          <p><a href="Married4Life.html">Married for Life</a></p>
+        </div>
+      </div>
+  
+      <div class="secondLane">
+        <p class="noice">Equipping</p>
+        <div class="links">
+          <p><a href="Mentoring.html">Mentoring</a></p>
+          <p><a href="SOL.html">SOL Class</a></p>
+          <p><a href="LifeClass.html">LifeClass</a></p>
+        </div>
+      </div>
+  
+      <div class="secondLane">
+        <p class="noice">Others</p>
+        <div class="links">
+          <p><a href="Media.html">Media</a></p>
+          <p><a href="PrayerRequest.html">Prayer Request</a></p>
+          <p><a href="Announcement.html">Announcements</a></p>
+        </div>
+      </div>
+  
+      <div class="secondLane">
+        <p class="noice">Socials</p>
+        <div class="links">
+          <p><a href="https://www.facebook.com/greatlightworldharvest">Facebook</a></p>
+          <p><a href="https://www.youtube.com/@jesusthegreatlightworldhar1413/featured">Youtube</a></p>
+        </div>
+      </div>
+  
+    </div>
+</div>
+
+
     </body>
 </html>
