--- a/Story5.html
+++ b/Story5.html
@@ -5,16 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="story4.css">
+    <link rel="stylesheet" href="StoriesNavBar.css">
+    <script src="j12kids.js" defer></script>
     <title>Feeding of the 5000</title>
 </head>
-    <body>
+<body>
 
-<div class="banner">
-    <div class="home">
-        <a href="J12Kids.html#stories">
-        <img src="SundaySchooltings/arrowback-removebg-preview.png" alt="">
-        </a>
-    </div>
+  <section id="home">
+    <nav class="navbar">
+      <div class="content">
+        <div class="logo">
+            <a href="index.html#connects">
+            <img src="HeadnFooter/logo.png" alt="">
+            </a>
+        </div>
+        <ul class="menu-list">
+            <div class="icon cancel-btn">
+                <img src="HeadnFooter/menu.png" alt="">
+            </div>
+            <li><a href="J12Kids.html">Home</a></li>
+            <li><a href="J12Kids.html#aboutus">About Us</a></li>
+            <li><a href="J12Kids.html#eteachers">Teachers</a></li>
+            <li><a href="J12Kids.html#blogs">Stories</a></li>
+            <li><a href="PrayerRequest.html">Prayer Request</a></li>
+            <li><a href="Announcement.html">Announcements</a></li>
+        </ul>
+        <div class="icon menu-btn">
+          <img src="HeadnFooter/menu.png" alt="">
+        </div>
+      </div>
+    </nav>
+  </section>
+
+<div class="banner1">
     <h1>Jesus feeds 5000 men</h1>
     <p>Matthew 14:13 - 21; Mark 6: 31 - 44; Luke 9: 12 - 17; John 6: 1 - 14</p>
 </div>
@@ -59,7 +82,7 @@
       <p>Equipping</p>
       <div class="botli">
         <p><a href="Mentoring.html">Mentoring</a></p>
-        <p><a href="SOL Class">SOL Class</a></p>
+        <p><a href="SOL.html">SOL Class</a></p>
         <p><a href="LifeClass.html">LifeClass</a></p>
       </div>
     </div>
@@ -111,7 +134,7 @@
         <p class="noice">Equipping</p>
         <div class="links">
           <p><a href="Mentoring.html">Mentoring</a></p>
-          <p><a href="SOL Class">SOL Class</a></p>
+          <p><a href="SOL.html">SOL Class</a></p>
           <p><a href="LifeClass.html">LifeClass</a></p>
         </div>
       </div>
