--- a/Blog2.html
+++ b/Blog2.html
@@ -5,16 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Blog1.css">
+    <link rel="stylesheet" href="BlogNavBar.css"> 
+    <script src="spearhead.js" defer></script>
     <title>Planning</title>
 </head>
-    <body>
+<body>
+
+  <section id="home">
+    <nav class="navbar">
+      <div class="content">
+        <div class="logo">
+            <a href="index.html#connects">
+            <img src="HeadnFooter/logo.png" alt="">
+            </a>
+        </div>
+        <ul class="menu-list">
+            <div class="icon cancel-btn">
+                <img src="HeadnFooter/menu.png" alt="">
+            </div>
+                <li><a href="index.html#connects">Home</a></li>
+                <li><a href="Spearhead.html#aboutus">About Us</a></li>
+                <li><a href="Spearhead.html#leads">Cell Leaders</a></li>
+                <li><a href="Spearhead.html#blogss">Blogs</a></li>
+                <li><a href="Spearhead.html#subs1">Subscribe</a></li>
+                <li><a href="Announcement.html">Announcements</a></li>
+        </ul>
+        <div class="icon menu-btn">
+          <img src="HeadnFooter/menu.png" alt="">
+        </div>
+      </div>
+    </nav>
+  </section>
 
 <div class="banner">
-    <div class="home">
-        <a href="Spearhead.html#blogss">
-        <img src="SundaySchooltings/arrowback-removebg-preview.png" alt="">
-        </a>
-    </div>
     <h1>Creating a Plan</h1>
     <p></p>
 </div>
@@ -24,7 +47,7 @@
 </div>
 
 
-<div class="content">
+<div class="content1">
     <p>Today, I want to talk to you about the importance of creating a plan for your future. As we journey through life, it is crucial to have a vision and a roadmap that will help us reach our goals and fulfill our purpose. Without a plan, we risk wandering aimlessly and not achieving the things we desire.</p>
     <p>The Bible tells us in Proverbs 29:18, "Where there is no vision, the people perish." This verse reminds us of the importance of having a vision for our lives. A vision helps us to focus on what is essential and provides us with the motivation and direction to pursue our dreams.</p>
     <p>To create a plan for your future, there are several steps you can take. The first step is to identify your goals. Think about what you want to accomplish in your life, both short-term and long-term. Write down your goals and be specific. Make sure that your goals are measurable, attainable, relevant, and time-bound.</p>
@@ -58,7 +81,7 @@
       <p>Equipping</p>
       <div class="botli">
         <p><a href="Mentoring.html">Mentoring</a></p>
-        <p><a href="SOL Class">SOL Class</a></p>
+        <p><a href="SOL.html">SOL Class</a></p>
         <p><a href="LifeClass.html">LifeClass</a></p>
       </div>
     </div>
