--- a/Blog5.html
+++ b/Blog5.html
@@ -5,16 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Blog1.css">
+    <link rel="stylesheet" href="BlogNavBar.css"> 
+    <script src="spearhead.js" defer></script>
     <title>Success</title>
 </head>
     <body>
 
+      <section id="home">
+        <nav class="navbar">
+          <div class="content">
+            <div class="logo">
+                <a href="index.html#connects">
+                <img src="HeadnFooter/logo.png" alt="">
+                </a>
+            </div>
+            <ul class="menu-list">
+                <div class="icon cancel-btn">
+                    <img src="HeadnFooter/menu.png" alt="">
+                </div>
+                    <li><a href="index.html#connects">Home</a></li>
+                    <li><a href="Spearhead.html#aboutus">About Us</a></li>
+                    <li><a href="Spearhead.html#leads">Cell Leaders</a></li>
+                    <li><a href="Spearhead.html#blogss">Blogs</a></li>
+                    <li><a href="Spearhead.html#subs1">Subscribe</a></li>
+                    <li><a href="Announcement.html">Announcements</a></li>
+            </ul>
+            <div class="icon menu-btn">
+              <img src="HeadnFooter/menu.png" alt="">
+            </div>
+          </div>
+        </nav>
+      </section>
+
 <div class="banner">
-    <div class="home">
-        <a href="Spearhead.html#blogss">
-        <img src="SundaySchooltings/arrowback-removebg-preview.png" alt="">
-        </a>
-    </div>
     <h1>What is Success?</h1>
     <p></p>
 </div>
@@ -24,7 +47,7 @@
 </div>
 
 
-<div class="content">
+<div class="content1">
     <p>Today, I want to talk to you about the definition of success. Success is something that we all strive for in life, but the definition of success can vary from person to person. We often think of success as achieving wealth, fame, or power, but true success is much more than that.</p>
     <p>The Bible tells us in Joshua 1:8, "Do not let this Book of the Law depart from your mouth; meditate on it day and night, so that you may be careful to do everything written in it. Then you will be prosperous and successful." This verse reminds us that true success comes from obeying God's word and living a life that is pleasing to Him.</p>
     <p>So, what is the definition of success? The definition of success is not about what we achieve, but rather who we become. Success is about living a life of purpose, making a positive impact on the world around us, and growing in our relationship with God.</p>
@@ -109,7 +132,7 @@
         <p class="noice">Equipping</p>
         <div class="links">
           <p><a href="Mentoring.html">Mentoring</a></p>
-          <p><a href="SOL.css">SOL Class</a></p>
+          <p><a href="SOL.html">SOL Class</a></p>
           <p><a href="LifeClass.html">LifeClass</a></p>
         </div>
       </div>
