--- a/Blog6.html
+++ b/Blog6.html
@@ -5,16 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Blog1.css">
+    <link rel="stylesheet" href="BlogNavBar.css"> 
+    <script src="spearhead.js" defer></script>
     <title>DecisionMaking</title>
 </head>
-    <body>
+<body>
+
+  <section id="home">
+    <nav class="navbar">
+      <div class="content">
+        <div class="logo">
+            <a href="index.html#connects">
+            <img src="HeadnFooter/logo.png" alt="">
+            </a>
+        </div>
+        <ul class="menu-list">
+            <div class="icon cancel-btn">
+                <img src="HeadnFooter/menu.png" alt="">
+            </div>
+                <li><a href="index.html#connects">Home</a></li>
+                <li><a href="Spearhead.html#aboutus">About Us</a></li>
+                <li><a href="Spearhead.html#leads">Cell Leaders</a></li>
+                <li><a href="Spearhead.html#blogss">Blogs</a></li>
+                <li><a href="Spearhead.html#subs1">Subscribe</a></li>
+                <li><a href="Announcement.html">Announcements</a></li>
+        </ul>
+        <div class="icon menu-btn">
+          <img src="HeadnFooter/menu.png" alt="">
+        </div>
+      </div>
+    </nav>
+  </section>
 
 <div class="banner">
-    <div class="home">
-        <a href="Spearhead.html#blogss">
-        <img src="SundaySchooltings/arrowback-removebg-preview.png" alt="">
-        </a>
-    </div>
     <h1>Decision Making</h1>
     <p></p>
 </div>
@@ -24,7 +47,7 @@
 </div>
 
 
-<div class="content">
+<div class="content1">
     <p>Dear brothers and sisters, Today, I want to talk to you about decision making. We all face decisions in our lives, some small and some significant. The choices we make can have a significant impact on our lives and the lives of those around us.</p>
     <p>The Bible tells us in Ephesians 5:15-16, "Be very careful, then, how you live—not as unwise but as wise, making the most of every opportunity, because the days are evil." This verse reminds us that we must be wise in how we use our time and make the most of every opportunity.</p>
     <p>The Bible tells us in Proverbs 3:5-6, "Trust in the Lord with all your heart and lean not on your own understanding; in all your ways submit to him, and he will make your paths straight." This verse reminds us that we must trust in God and seek His guidance in all of our decisions.</p>
