--- a/LifeClass.html
+++ b/LifeClass.html
@@ -5,15 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Lifeclass.css">
-    <script defer src="sundayService.js"></script>
+    <link rel="stylesheet" href="LifeClassNavBar.css">
+    <script defer src="equipping.js"></script>
     <title>LifeClass</title>
 </head>
 <body>
+
+  <section id="home">
+    <nav class="navbar">
+    <div class="content">
+        <div class="logo">
+            <a href="index.html#equipping">
+            <img src="HeadnFooter/logo.png" alt="">
+            </a>
+        </div>
+        <ul class="menu-list">
+            <div class="icon cancel-btn">
+                <img src="HeadnFooter/menu.png" alt="">
+            </div>
+                <li><a href="Mentoring.html">Mentoring</a></li>
+                <li><a href="SOL.html">SOL CLass</a></li>
+                <li><a href="LifeClass.html">Life Class</a></li>
+                <li><a href="Announcement.html">Announcements</a></li>
+        </ul>
+        <div class="icon menu-btn">
+            <img src="HeadnFooter/menu.png" alt="">
+        </div>
+    </div>
+    </nav>
+</section>
+
    
     <div class="bgweb">
-      <div class="imageHolder">
-        <a href="index.html#equipping"><img src="HeadnFooter/logo.png" alt=""></a>
-      </div>
 
       <div class="plateName">
         <h2>Equipping</h2>
@@ -69,7 +92,7 @@
         <p>Equipping</p>
         <div class="botli">
           <p><a href="Mentoring.html">Mentoring</a></p>
-          <p><a href="SOL Class">SOL Class</a></p>
+          <p><a href="SOL.html">SOL Class</a></p>
           <p><a href="LifeClass.html">LifeClass</a></p>
         </div>
       </div>
@@ -121,7 +144,7 @@
           <p class="noice">Equipping</p>
           <div class="links">
             <p><a href="Mentoring.html">Mentoring</a></p>
-            <p><a href="SOL Class">SOL Class</a></p>
+            <p><a href="SOL.html">SOL Class</a></p>
             <p><a href="LifeClass.html">LifeClass</a></p>
           </div>
         </div>
