--- a/Married4Life.html
+++ b/Married4Life.html
@@ -23,9 +23,9 @@
                     <img src="HeadnFooter/menu.png" alt="">
                 </div>
                     <li><a href="index.html#connects">Home</a></li>
-                    <li><a href="#aboutus">About Us</a></li>
-                    <li><a href="#blogs">Blogs</a></li>
-                    <li><a href="#subscribe">Subscribe</a></li>
+                    <li><a href="Married4Life.html#aboutus">About Us</a></li>
+                    <li><a href="Married4Life.html#blogs">Blogs</a></li>
+                    <li><a href="Married4Life.html#subscribe">Subscribe</a></li>
                     <li><a href="Announcement.html">Announcements</a></li>
             </ul>
             <div class="icon menu-btn">
@@ -136,7 +136,7 @@
       <p>Equipping</p>
       <div class="botli">
         <p><a href="Mentoring.html">Mentoring</a></p>
-        <p><a href="SOL Class">SOL Class</a></p>
+        <p><a href="SOL.html">SOL Class</a></p>
         <p><a href="LifeClass.html">LifeClass</a></p>
       </div>
     </div>
@@ -188,7 +188,7 @@
         <p class="noice">Equipping</p>
         <div class="links">
           <p><a href="Mentoring.html">Mentoring</a></p>
-          <p><a href="SOL Class">SOL Class</a></p>
+          <p><a href="SOL.html">SOL Class</a></p>
           <p><a href="LifeClass.html">LifeClass</a></p>
         </div>
       </div>
