--- a/Mentoring.html
+++ b/Mentoring.html
@@ -5,18 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Mentoring.css">
-    <script defer src="sundayService.js"></script>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Poppins&family=Roboto+Condensed:ital,wght@0,400;1,300&display=swap');
-    </style>
+    <link rel="stylesheet" href="MentoringNavbar.css">
+    <script defer src="equipping.js"></script>
     <title>Mentoring</title>
 </head>
 <body>
 
-    <div class="bgweb">
-        <div class="imageHolder">
-          <a href="index.html#equipping"><img src="HeadnFooter/logo.png" alt=""></a>
+  <section id="home">
+    <nav class="navbar">
+    <div class="content">
+        <div class="logo">
+            <a href="index.html#equipping">
+            <img src="HeadnFooter/logo.png" alt="">
+            </a>
         </div>
+        <ul class="menu-list">
+            <div class="icon cancel-btn">
+                <img src="HeadnFooter/menu.png" alt="">
+            </div>
+                <li><a href="Mentoring.html">Mentoring</a></li>
+                <li><a href="SOL.html">SOL CLass</a></li>
+                <li><a href="LifeClass.html">Life Class</a></li>
+                <li><a href="Announcement.html">Announcements</a></li>
+        </ul>
+        <div class="icon menu-btn">
+            <img src="HeadnFooter/menu.png" alt="">
+        </div>
+    </div>
+    </nav>
+</section>
+
+    <div class="bgweb">
   
         <div class="plateName">
           <h2>Equipping</h2>
@@ -92,7 +111,7 @@
           <p>Equipping</p>
           <div class="botli">
             <p><a href="Mentoring.html">Mentoring</a></p>
-            <p><a href="SOL Class">SOL Class</a></p>
+            <p><a href="SOL.html">SOL Class</a></p>
             <p><a href="LifeClass.html">LifeClass</a></p>
           </div>
         </div>
@@ -144,7 +163,7 @@
             <p class="noice">Equipping</p>
             <div class="links">
               <p><a href="Mentoring.html">Mentoring</a></p>
-              <p><a href="SOL Class">SOL Class</a></p>
+              <p><a href="SOL.html">SOL Class</a></p>
               <p><a href="LifeClass.html">LifeClass</a></p>
             </div>
           </div>
