--- a/Story1.html
+++ b/Story1.html
@@ -5,16 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="story.css">
+    <link rel="stylesheet" href="StoriesNavBar.css">
+    <script src="j12kids.js" defer></script>
+
     <title>Why Jesus Loves Children?</title>
 </head>
     <body>
 
+      <section id="home">
+        <nav class="navbar">
+          <div class="content">
+            <div class="logo">
+                <a href="index.html#connects">
+                <img src="HeadnFooter/logo.png" alt="">
+                </a>
+            </div>
+            <ul class="menu-list">
+                <div class="icon cancel-btn">
+                    <img src="HeadnFooter/menu.png" alt="">
+                </div>
+                    <li><a href="J12Kids.html">Home</a></li>
+                    <li><a href="J12Kids.html#aboutus">About Us</a></li>
+                    <li><a href="J12Kids.html#eteachers">Teachers</a></li>
+                    <li><a href="J12Kids.html#blogs">Stories</a></li>
+                    <li><a href="PrayerRequest.html">Prayer Request</a></li>
+                    <li><a href="Announcement.html">Announcements</a></li>
+            </ul>
+            <div class="icon menu-btn">
+              <img src="HeadnFooter/menu.png" alt="">
+            </div>
+          </div>
+        </nav>
+      </section>
+
 <div class="banner">
-    <div class="home">
-        <a href="J12Kids.html#stories">
-        <img src="SundaySchooltings/arrowback-removebg-preview.png" alt="">
-        </a>
-    </div>
     <h1>Why Jesus Loves Children?</h1>
     <p>Matthew 18:1-5 / Mark 10:13-16</p>
 </div>
@@ -59,7 +83,7 @@
       <p>Equipping</p>
       <div class="botli">
         <p><a href="Mentoring.html">Mentoring</a></p>
-        <p><a href="SOL Class">SOL Class</a></p>
+        <p><a href="SOL.html">SOL Class</a></p>
         <p><a href="LifeClass.html">LifeClass</a></p>
       </div>
     </div>
@@ -111,7 +135,7 @@
         <p class="noice">Equipping</p>
         <div class="links">
           <p><a href="Mentoring.html">Mentoring</a></p>
-          <p><a href="SOL Class">SOL Class</a></p>
+          <p><a href="SOL.html">SOL Class</a></p>
           <p><a href="LifeClass.html">LifeClass</a></p>
         </div>
       </div>
