--- a/Archive1.html
+++ b/Archive1.html
@@ -14,9 +14,11 @@
       <section id="home">
         <nav class="navbar">
           <div class="content">
-            <a href="index.html#connects">
+            <div class="logo">
+              <a href="index.html#connects">
               <img src="HeadnFooter/logo.png" alt="">
-            </a>
+              </a>
+          </div>
             <ul class="menu-list">
               <div class="icon cancel-btn">
                 <img src="HeadnFooter/menu.png" alt="">
@@ -37,11 +39,6 @@
       
 
 <div class="banner">
-    <div class="home">
-        <a href="Sundayservice.html#sermons">
-        <img src="SundaySchooltings/arrowback-removebg-preview.png" alt="">
-        </a>
-    </div>
     <h1>Tithes and Offering</h1>
     <p>Speaker: Rev. Alexander V. Isaguirre</p>
 </div>
@@ -55,7 +52,7 @@
     <p>Malachi 3:10</p>
 </div>
 
-<div class="content">
+<div class="content1">
     <p>Good day, brothers and sisters in Christ. Today, I want to talk to you about the importance of tithes and offerings, and the blessings that come from giving generously to God.</p>
     <p>First, let's define what tithes and offerings are. Tithing is the practice of giving a tenth of our income to the church, while offerings are additional gifts we give to support the work of God's kingdom</p>
     <p>Many Christians struggle with the idea of giving a tithe. They may think, "I need this money for my bills and other expenses," or "I don't trust how the church will use my donation." But the truth is that tithing is not just about money, it's about trust and obedience.</p>
