--- a/Archive2.html
+++ b/Archive2.html
@@ -14,9 +14,11 @@
       <section id="home">
         <nav class="navbar">
           <div class="content">
-            <a href="index.html#connects">
+            <div class="logo">
+              <a href="index.html#connects">
               <img src="HeadnFooter/logo.png" alt="">
-            </a>
+              </a>
+          </div>
             <ul class="menu-list">
               <div class="icon cancel-btn">
                 <img src="HeadnFooter/menu.png" alt="">
@@ -37,11 +39,7 @@
       
 
 <div class="banner">
-    <div class="home">
-        <a href="Sundayservice.html#sermons">
-        <img src="SundaySchooltings/arrowback-removebg-preview.png" alt="">
-        </a>
-    </div>
+   
     <h1>What is Salvation?</h1>
     <p>Speaker: Rev. Alexander V. Isaguirre</p>
 </div>
@@ -55,7 +53,7 @@
     <p>John 3:16</p>
 </div>
 
-<div class="content">
+<div class="content1">
     <p>Good day, brothers and sisters in Christ. Today, I want to talk to you about the most precious gift that God has given us - the gift of salvation.</p>
     <p>Salvation is the central message of the gospel, and it is the reason why Jesus came to earth, died on the cross, and rose from the dead. Salvation is the way that God rescues us from sin and death and gives us eternal life.</p>
     <p>So, what is salvation? Simply put, salvation is the act of being saved or rescued from something. In the context of Christianity, salvation is being saved from the consequences of our sin and rebellion against God. Because of our sin, we are separated from God, and we face eternal punishment in hell. But God, in His mercy and grace, has provided a way for us to be saved - through faith in Jesus Christ.</p>
