--- a/Archive3.html
+++ b/Archive3.html
@@ -15,9 +15,11 @@
       <section id="home">
         <nav class="navbar">
           <div class="content">
-            <a href="index.html#connects">
+            <div class="logo">
+              <a href="index.html#connects">
               <img src="HeadnFooter/logo.png" alt="">
-            </a>
+              </a>
+          </div>
             <ul class="menu-list">
               <div class="icon cancel-btn">
                 <img src="HeadnFooter/menu.png" alt="">
@@ -38,11 +40,7 @@
       
 
 <div class="banner">
-    <div class="home">
-        <a href="Sundayservice.html#sermons">
-        <img src="SundaySchooltings/arrowback-removebg-preview.png" alt="">
-        </a>
-    </div>
+   
     <h1>The Price of Sin</h1>
     <p>Ps. Emy Isaguirre</p>
 </div>
@@ -56,7 +54,7 @@
     <p>Romans 6:23</p>
 </div>
 
-<div class="content">
+<div class="content1">
     <p>Dear brothers and sisters in Christ, today I want to talk to you about the price of sin. Sin is a serious matter, and it has a high cost - not only in this life, but also in the life to come.</p>
     <p>The Bible tells us that sin is disobedience to God's commands, and that it separates us from Him. It is the root cause of all the pain, suffering, and evil in the world, and it leads to death - not just physical death, but spiritual death as well.</p>
     <p>The price of sin is high because it requires payment - payment that we cannot make on our own. The Bible tells us that the wages of sin is death, which means that sin deserves punishment. But the good news is that God has provided a way for us to be saved from the penalty of our sin.</p>
