--- a/Archive4.html
+++ b/Archive4.html
@@ -15,9 +15,11 @@
       <section id="home">
         <nav class="navbar">
           <div class="content">
-            <a href="index.html#connects">
+            <div class="logo">
+              <a href="index.html#connects">
               <img src="HeadnFooter/logo.png" alt="">
-            </a>
+              </a>
+          </div>
             <ul class="menu-list">
               <div class="icon cancel-btn">
                 <img src="HeadnFooter/menu.png" alt="">
@@ -38,11 +40,7 @@
       
 
 <div class="banner">
-    <div class="home">
-        <a href="Sundayservice.html#sermons">
-        <img src="SundaySchooltings/arrowback-removebg-preview.png" alt="">
-        </a>
-    </div>
+    
     <h1>Miracles of Life</h1>
     <p>Ps. Emy Isaguirre</p>
 </div>
@@ -56,7 +54,7 @@
     <p>John 20:30-31</p>
 </div>
 
-<div class="content">
+<div class="content1">
     <p>Dear brothers and sisters in Christ, today I want to talk to you about the miracles of life. God has given us many wonderful and amazing things to enjoy and appreciate, and one of the greatest miracles of all is the gift of life itself.</p>
     <p>From the very beginning of creation, God has demonstrated His power and love through the miracles of life. He created the heavens and the earth, the sun and the stars, the plants and animals, and finally, He created us - human beings, in His own image.</p>
     <p>But even after the creation of man, God continued to perform miracles to show His love and power. Jesus, the Son of God, performed many miracles during His time on earth. He healed the sick, fed the hungry, calmed the storms, and even raised the dead. Through these miracles, Jesus demonstrated His power and love, and showed that He is indeed the Son of God.</p>
