--- a/Archive5.html
+++ b/Archive5.html
@@ -15,9 +15,11 @@
       <section id="home">
         <nav class="navbar">
           <div class="content">
-            <a href="index.html#connects">
+            <div class="logo">
+              <a href="index.html#connects">
               <img src="HeadnFooter/logo.png" alt="">
-            </a>
+              </a>
+          </div>
             <ul class="menu-list">
               <div class="icon cancel-btn">
                 <img src="HeadnFooter/menu.png" alt="">
@@ -38,11 +40,7 @@
       
 
 <div class="banner">
-    <div class="home">
-        <a href="Sundayservice.html#sermons">
-        <img src="SundaySchooltings/arrowback-removebg-preview.png" alt="">
-        </a>
-    </div>
+   
     <h1>Guarding Our Heart</h1>
     <p>Ps. Emy Isaguirre</p>
 </div>
@@ -56,7 +54,7 @@
     <p>Proverbs 4:23</p>
 </div>
 
-<div class="content">
+<div class="content1">
     <p>Dear brothers and sisters in Christ, today I want to talk to you about the importance of guarding our heart. Our heart is the seat of our emotions, desires, and motives. It is the source of our thoughts, words, and actions. And so, it is crucial that we guard our heart, for everything we do flows from it.</p>
     <p>The Bible tells us that our heart is deceitful and wicked (Jeremiah 17:9). It is prone to wander and to follow after the desires of the flesh. That is why we need to guard our heart, to protect it from the temptations and deceptions of the world.</p>
     <p>So, how do we guard our heart? First and foremost, we need to fill our heart with the truth of God's Word. The Bible tells us that it is the "sword of the Spirit" (Ephesians 6:17), and it is able to pierce through the lies and deceptions of the enemy. When we meditate on God's Word and hide it in our heart, we are equipped to discern right from wrong and to resist temptation.</p>
