--- a/AnnounceTrial.html
+++ b/AnnounceTrial.html
@@ -43,6 +43,11 @@
     <div class="announce"></div>
     <div class="news1">
       <img src="AnnounceIMGs/Sunday School (1).jpg" alt="">
+      <div class="textBox">
+        <h1 id="plateName">Sunday School</h1>
+        <h1>Sunday Service</h1>
+        <p>We are thrilled to invite you to our upcoming Sunday Service, a spiritual celebration filled with love, joy, and unity! We warmly welcome each and every one of you to join us on a remarkable journey of faith and fellowship.For those who are unable to attend in person, fear not! We are delighted to offer Live Streaming Services, enabling you to participate in the Sunday Service from the comfort of your homes. Simply tune in to our live stream through [Insert Platform/Link], and you will be connected with the spiritual atmosphere of our congregation, no matter the distance.</p>
+      </div>
     </div>
   </section>
 
