--- a/Sundayservice.html
+++ b/Sundayservice.html
@@ -25,7 +25,7 @@
           <li><a href="#sermons">Sermons</a></li>
           <li><a href="#subscribe">Subscribe</a></li>
           <li><a href="PrayerRequest.html">Prayer Request</a></li>
-          <li><a href="Announcement.html">Announcements</a></li>
+          <li><a href="AnnouncementSundayService.html">Announcements</a></li>
         </ul>
         <div class="icon menu-btn">
           <img src="HeadnFooter/menu.png" alt="">
